wip: create alchemy-select component
Will behave like a select2 with search field if more than 5 options are present.

--- a/app/assets/stylesheets/alchemy/admin.scss
+++ b/app/assets/stylesheets/alchemy/admin.scss
@@ -8,6 +8,7 @@
 @import "fontawesome/solid";
 @import "alchemy/defaults";
 @import "alchemy/archive";
+@import "alchemy/alchemy-select";
 @import "alchemy/navigation";
 @import "alchemy/attachments";
 @import "alchemy/base";
